[gd_scene load_steps=4 format=3 uid="uid://cgs0u1j4mhhx5"]

[ext_resource type="Script" path="res://InventorySystem/ItemDescriptor/ItemDescriptor.gd" id="1_2v1h2"]
[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_qi0qj"]
[ext_resource type="Texture2D" uid="uid://cw7pry6dv5w2k" path="res://Assets/Items/materials-science.png" id="2_yditg"]

[node name="ItemDesc" type="PanelContainer" node_paths=PackedStringArray("ItemIcon", "ItemName", "ItemDesc", "UsableItemsActions", "UpgradeContainer", "ShipPartActions", "RepairButton", "UseButton", "TransferButton", "UpgradeButton", "UpgradeLabel") groups=["ItemDescriptor"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_qi0qj")
script = ExtResource("1_2v1h2")
ItemIcon = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/TextureRect")
ItemName = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/ItemName")
ItemDesc = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/ItemDesc")
UsableItemsActions = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/UsableItemsActions")
UpgradeContainer = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/UpgradeContainer")
ShipPartActions = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions")
RepairButton = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions/Repair")
UseButton = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/UsableItemsActions/Use")
TransferButton = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/Transfer")
UpgradeButton = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions/Upgrade")
UpgradeLabel = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/UpgradeContainer/Label")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 9
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(265, 80)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ItemName" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Item"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("2_yditg")
expand_mode = 2

[node name="UpgradeContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
alignment = 1

[node name="Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer/UpgradeContainer"]
custom_minimum_size = Vector2(181.765, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[color=#c19200]Upgrade Time[/color] : 4x
"
fit_content = true
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/UpgradeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4

[node name="ShipPartActions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Upgrade" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Upgrade"

[node name="Repair" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions" groups=["Buttons"]]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Repair"

[node name="UsableItemsActions" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="UseLess" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/UsableItemsActions" groups=["Buttons"]]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "-"

[node name="Use" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/UsableItemsActions" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Use :1x"

[node name="UseMore" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/UsableItemsActions" groups=["Buttons"]]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "+"

[node name="Panel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ItemDesc" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
bbcode_enabled = true
text = "fwafawf affwfafwafwafwaf awfwafwafw awfwafwaf"
fit_content = true
autowrap_mode = 2

[node name="Transfer" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_font_sizes/font_size = 24
text = "Transfer"

[node name="Drop" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2" groups=["Buttons"]]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Drop"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/ShipPartActions/Repair" to="." method="_on_repair_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Transfer" to="." method="_on_transfer_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Drop" to="." method="_on_drop_pressed"]
